fix: :bug: fix swagger error of OrderSignaturePayload
